[package]
name = "witransfer"
version = "0.1.1"
edition = "2021"
authors = ["Aditya Kumar <theadityakumardeveloper@gmail.com>"]
description = "A CLI Tool to transer files over wi-fi"
repository = "https://github.com/adityajideveloper/witransfer"
license = "MIT"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
